--- a/ekskurzija_backend/.env
+++ b/ekskurzija_backend/.env
@@ -2,6 +2,8 @@ NODE_ENV=dev
 NODE_PORT=5201
 NODE_HOST=0.0.0.0
 
+ALLOWED_ORIGIN=http://localhost:4200
+
 DB_HOST=localhost
 DB_NAME=school_trip
 DB_USER=root
