--- a/ekskurzija_backend/package.json
+++ b/ekskurzija_backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   
   "scripts": {
-    "serve": "tsc index.ts -w & pm2 start pm2.config.js --watch",
+    "serve": "./node_modules/.bin/pm2 start pm2.config.js --watch",
     "delete": "pm2 delete index",
     "stop": "pm2 stop index",
     "log": "pm2 log index",
