--- a/ekskurzija_backend/.env
+++ b/ekskurzija_backend/.env
@@ -6,9 +6,9 @@ ALLOWED_ORIGIN=http://localhost:4200
 
 DB_HOST=localhost
 DB_NAME=school_trip
-DB_USER=root
+DB_USER=ekskurzija_user
 DB_PORT=3306
-DB_PASS=root2021
+DB_PASS=ekskurzija_user
 
 
 NODE_PASSWD=ekskuzrijakviz
