--- a/ekskurzija_backend/.env
+++ b/ekskurzija_backend/.env
@@ -8,7 +8,7 @@ DB_HOST=localhost
 DB_NAME=school_trip
 DB_USER=ekskurzija_user
 DB_PORT=3306
-DB_PASS=ekskurzija_user
+DB_PASS=ekskurzija
 
 
 NODE_PASSWD=ekskuzrijakviz
