--- a/ekskurzija_backend/.env
+++ b/ekskurzija_backend/.env
@@ -6,7 +6,7 @@ ALLOWED_ORIGIN=http://localhost:4200
 
 DB_HOST=localhost
 DB_NAME=school_trip
-DB_USER=ekskurzija_user
+DB_USER=ekskurzija
 DB_PORT=3306
 DB_PASS=ekskurzija
 
